<resources>
    <string name="app_name">StreamPlay</string>
    <string name="desc_media_cover">Medien-Cover</string>
    <string name="desc_media_item_container">Medien-Container</string>
    <string name="desc_guideline">Hilfslinien für Layout</string>
    <string name="desc_cover_image">Cover-Bild des Medien-Elements</string>
    <string name="desc_player_buttons_group">Player-Steuerung: zurück, Play/Pause, vor</string>
    <string name="desc_button_back">Zurück-Button</string>
    <string name="desc_button_play_pause">Play- oder Pause-Button</string>
    <string name="desc_button_forward">Vor-Button</string>
    <string name="desc_shortcut_recycler_view">Schnellzugriffsliste</string>
    <string name="desc_right_buttons_container">Container für rechte Schaltflächen</string>
    <string name="desc_right_vertical_buttons">Vertikale Buttons: Stumm, Teilen, Menü</string>
    <string name="desc_button_mute_unmute">Stummschalt-Button</string>
    <string name="desc_button_share">Teilen-Button</string>
    <string name="desc_button_menu">Menü-Button</string>
    <string name="desc_volume_slider">Lautstärkeregler</string>
    <string name="desc_metainfo_overlay_container">Metainfo-Overlay-Container</string>
    <string name="desc_metainfo_overlay_image">Meta-Bild</string>
    <string name="desc_metainfo_overlay_texts_container">Container für Overlay-Texte</string>
    <string name="desc_metainfo_overlay_text_title">Titel-Overlay-Text</string>
    <string name="desc_metainfo_overlay_text_artist">Künstler-Overlay-Text</string>
    <string name="desc_button_manual_log">Manueller Log-Button</string>
    <string name="desc_station_overlay_container">Sender-Overlay-Container</string>
    <string name="desc_station_overlay_content">Inhalt des Sender-Overlays</string>
    <string name="desc_station_overlay_image">Bild im Sender-Overlay</string>
    <string name="desc_station_overlay_text">Text im Sender-Overlay</string>
    <string name="placeholder_upper_overlay">Oberer Overlay-Text</string>
    <string name="streams_title">Streams</string>
    <string name="add_stream">Stream hinzufügen</string>
    <string name="edit_stream">Stream bearbeiten</string>
    <string name="delete_stream">Stream löschen</string>
    <string name="pin_to_home">Zum Startbildschirm</string>
    <string name="more_options">Weitere Optionen</string>
    <string name="station_name_hint">Sendername</string>
    <string name="stream_url_hint">Stream-URL</string>
    <string name="icon_url_hint">Icon-URL (optional)</string>
    <string name="save">Speichern</string>
    <string name="confirm_delete_station">Sender löschen?</string>
    <string name="confirm_delete_station_message">Möchtest du \"%1$s\" wirklich löschen?</string>
    <string name="error_stream_url_required">Stream-URL ist erforderlich</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="sample_text_station_metadata" translatable="false">David Bowie - The Man Who Sold The World</string>
    <string name="sample_text_station_name" translatable="false">Byte FM</string>
    <string name="sample_text_steam_url" translatable="false">http://bytefm.cast.addradio.de/bytefm/main/mid/stream</string>
    <string name="sample_text_sleep_timer_remaining_time" translatable="false">00:00</string>
    <string name="streaming_service_notification_title">Streaming-Dienst</string>
    <string name="streaming_service_notification_text">Wird initialisiert…</string>
    <string name="streaming_service_channel_name">Streaming-Dienst Kanal</string>
    <string name="streaming_service_channel_description">Kanal für den Streaming-Dienst</string>
    <string name="streaming_service_refresh_playlist_log">🔁 refreshPlaylist() ausgeführt!</string>
    <string name="streaming_service_media_item_changed_log">🔁 MediaItem geändert: Index = %1$d</string>
    <string name="streaming_service_timeline_changed_log">📻 Timeline geändert</string>
    <string name="streaming_service_unknown_stream">Unbekannter Stream</string>
    <string name="streaming_service_error_message">Fehler beim Abspielen von %1$s: %2$s\n%3$s: %4$s</string>
    <string name="descr_back_icon">Zurück navigieren</string>
    <string name="fragment_stations_title">Stationen</string>
    <string name="unknown_title">Keine Titelinformation</string>
    <string name="unknown_artist">Keine Künstlerinformation</string>
    <string name="unknown_station">Unbekannter Sender</string>
    <string name="unknown_album">Unbekanntes Album</string>
    <string name="album_prefix">Album: %1$s</string>
    <string name="genre_prefix">Genre: %1$s</string>
    <string name="unknown_genre">Unbekanntes Genre</string>
    <string name="share_text">Hey! Ich höre gerade: %1$s von %2$s\nSchau mal rein: %3$s</string>
    <string name="share_chooser_title">Teilen mit…</string>
    <string name="bottom_sheet_title">Menü</string>
    <string name="bottom_sheet_station_text">Meine Stationen</string>
    <string name="bottom_sheet_station_desc">Sender verwalten und bearbeiten</string>
    <string name="bottom_sheet_station_content_desc">Stationen öffnen</string>
    <string name="bottom_sheet_discover_text">Entdecken</string>
    <string name="bottom_sheet_discover_desc">Neue Radiosender finden</string>
    <string name="bottom_sheet_discover_content_desc">Online-Sender durchsuchen</string>
    <string name="bottom_sheet_logs_text">Song-Verlauf</string>
    <string name="bottom_sheet_logs_desc">Gespielte Titel anzeigen</string>
    <string name="bottom_sheet_logs_content_desc">Metadaten-Log anzeigen</string>
    <string name="bottom_sheet_settings_text">Einstellungen</string>
    <string name="bottom_sheet_settings_desc">App konfigurieren</string>
    <string name="bottom_sheet_settings_content_desc">Einstellungen öffnen</string>
    <string name="bottom_sheet_equalizer_text">Equalizer</string>
    <string name="bottom_sheet_equalizer_desc">Klang anpassen</string>
    <string name="bottom_sheet_equalizer_content_desc">Equalizer öffnen</string>
    <string name="lyrics_title">Lyrics</string>
    <string name="lyrics_loading">Lyrics werden gesucht…</string>
    <string name="lyrics_not_found">Keine Lyrics gefunden</string>
    <string name="lyrics_instrumental">Instrumental</string>
    <string name="lyrics_no_track">Kein Song wird abgespielt</string>
    <string name="lyrics_error">Fehler beim Laden der Lyrics</string>
    <string name="eq_title">Equalizer</string>
    <string name="eq_preset">Preset</string>
    <string name="eq_cancel">Abbrechen</string>
    <string name="eq_apply">Übernehmen</string>
    <string name="eq_saved">Equalizer-Einstellungen gespeichert</string>
    <string name="eq_not_available">Equalizer nicht verfügbar - starte zuerst einen Stream</string>
    <string name="search_logs_hint">Suchen…</string>
    <string name="clear_logs">Verlauf löschen</string>
    <string name="filter_manual_logs">Nur manuelle Einträge anzeigen</string>
    <string name="manual_log_saved">Gespeichert</string>
    <string name="meta_log_filter_all">Alle</string>
    <string name="meta_log_filter_saved">Gespeichert</string>
    <string name="meta_log_empty_title">Noch keine Songs</string>
    <string name="meta_log_empty_subtitle">Gehörte Songs erscheinen hier automatisch</string>
    <string name="meta_log_open_spotify">Auf Spotify öffnen</string>
    <string name="meta_log_date_today">Heute</string>
    <string name="meta_log_date_yesterday">Gestern</string>
    <string name="meta_log_time_all">Alle</string>
    <string name="meta_log_time_last_hour">Letzte Stunde</string>
    <string name="meta_log_time_today">Heute</string>
    <string name="meta_log_time_yesterday">Gestern</string>
    <string name="meta_log_time_week">Diese Woche</string>
    <string name="meta_log_time_month">Diesen Monat</string>
    <string name="meta_log_time_custom">Zeitraum</string>
    <string name="meta_log_time_from">Von</string>
    <string name="meta_log_time_to">Bis</string>
    <string name="meta_log_confirm_clear_title">Verlauf löschen?</string>
    <string name="meta_log_confirm_clear_message">Der gesamte Song-Verlauf wird unwiderruflich gelöscht.</string>
    <string name="meta_log_cleared">Verlauf gelöscht</string>
    <string name="drag_handle_desc">Station verschieben</string>
    <string name="desc_button_play_station">Diesen Sender abspielen</string>
    <string name="toast_shortcut_added">Verknüpfung zum Startbildschirm hinzugefügt</string>
    <string name="discover_title">Entdecken</string>
    <string name="search_hint">Sender suchen…</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="filter_country">Land</string>
    <string name="filter_genre">Genre</string>
    <string name="filter_language">Sprache</string>
    <string name="filter_codec">Codec</string>
    <string name="clear_filters">Filter löschen</string>
    <string name="filter_summary_none">Keine Filter aktiv</string>
    <string name="confirm_add_title">Sender hinzufügen</string>
    <string name="confirm_add_message">%1$s zur Playlist hinzufügen?</string>
    <string name="discover_tab_top">Top Charts</string>
    <string name="discover_tab_local">In deiner Nähe</string>
    <string name="discover_tab_genres">Genres</string>
    <string name="discover_tab_trending">Trending</string>
    <string name="discover_votes">%1$s Votes</string>
    <string name="discover_listeners">%1$s Hörer</string>
    <string name="discover_loading">Lädt…</string>
    <string name="discover_no_results">Keine Sender gefunden</string>
    <string name="discover_pull_refresh">Zum Aktualisieren ziehen</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_autoplay">Autoplay</string>
    <string name="settings_delay">Minimieren-Verzögerung</string>
    <string name="settings_delay_seconds">%1$d s</string>
    <string name="settings_minimize">Nach Autoplay minimieren</string>
    <string name="settings_rotation">Bildschirmausrichtung</string>
    <string name="orientation_auto">Automatisch</string>
    <string name="orientation_landscape">Querformat</string>
    <string name="orientation_portrait">Hochformat</string>
    <string name="rotation_locked_landscape">Rotation gesperrt: Querformat</string>
    <string name="rotation_locked_portrait">Rotation gesperrt: Hochformat</string>
    <string name="rotation_unlocked">Rotation entsperrt</string>
    <string name="settings_language">Sprache</string>
    <string name="language_system">Systemsprache</string>
    <string name="language_german">Deutsch</string>
    <string name="language_english">English</string>
    <string name="settings_category_playback">Wiedergabe</string>
    <string name="settings_category_ui">Oberflächen-Einstellungen</string>
    <string name="settings_category_metainfo">Metainfo-Einstellungen</string>
    <string name="settings_category_spotify_meta">Spotify Meta</string>
    <string name="settings_category_recording">Aufnahme</string>
    <string name="settings_category_personal_sync">Personal Sync</string>
    <string name="settings_category_about">Über</string>
    <string name="settings_category_dev">Entwickler</string>
    <string name="settings_recording_enabled">Aufnahme aktiviert</string>
    <string name="settings_recording_enabled_summary">Ermöglicht das Aufnehmen von Streams</string>
    <string name="settings_recording_disabled_while_recording">Kann während einer Aufnahme nicht deaktiviert werden</string>
    <string name="settings_recording_path">Speicherort</string>
    <string name="settings_recording_path_summary">Downloads/streamplay</string>
    <string name="settings_category_player">Player-Einstellungen</string>
    <string name="crash_log_empty_title">Keine Fehlerprotokolle</string>
    <string name="crash_log_empty_subtitle">Hier erscheinen Crash-Logs falls die App abstürzt</string>
    <string name="crash_log_export">Exportieren</string>
</resources>