<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <include layout="@layout/topbar" />

    <Switch
        android:id="@+id/switch_autoplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_autoplay" />

    <TextView
        android:id="@+id/text_delay_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/settings_delay" />

    <SeekBar
        android:id="@+id/seekbar_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10" />

    <Switch
        android:id="@+id/switch_minimize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_minimize" />

</LinearLayout>
